fix visual jump on tab switch

--- a/src/components/Dropdown/styles.css
+++ b/src/components/Dropdown/styles.css
@@ -49,7 +49,6 @@
   z-index: 100;
   position: absolute;
   background-color: #fff;
-  align-self: center;
   display: inline-flex;
   flex-direction: column;
   justify-content: space-around;
